--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,4 @@ build/
 # End of https://www.gitignore.io/api/dart,swift,xcode,android,intellij,cocoapods,objective-c,androidstudio
 
 **/flutter_export_environment.sh
+.flutter-plugins-dependencies
