player: adding speed change sprite
- still not positioned correctly when player is rotated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,3 +21,4 @@ flutter:
     - assets/images/static/diamond.png
     - assets/images/static/wall-metal.png
     - assets/images/ufo.png
+    - assets/images/sprites/rocket-fire.png
