--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,3 +22,4 @@ flutter:
     - assets/images/static/wall-metal.png
     - assets/images/ufo.png
     - assets/images/sprites/rocket-fire.png
+    - assets/audio/thrust.mp3
